[tool.poetry]
name = "searcher-scraper"
version = "0.1.0"
description = "Web Scraper for multiple Georgian Websites built with scrapy"
authors = ["naviamold <89490126+Naviamold1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "searcher_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.10.0"
scrapy-fake-useragent = "^1.4.4"
scrapy-rotating-proxies = "^0.6.2"
scrapy-splash = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-length = "^0.3.1"
pre-commit = "^3.4.0"
black = "^23.7.0"
isort = "^5.12.0"



[tool.poetry.group.api.dependencies]
scrapyrt = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
